車が走行する効果音を鳴らしてみる

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <div class="main">
-    </div>
+    <audio id="audio" src="./car-driving-on-road-1.mp3" loop></audio>
     <script>
         var car;
         window.onload = function () {
